<resources>
    <string name="app_name">JetpackPro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movies</string>
    <string name="tv_show">Tv Shows</string>
    <string name="releasedate">Release Date : %s</string>
    <string name="first_air_date">First Air Date : %s</string>
    <string name="total_episode">Total Episodes : %s</string>
    <string name="title">Title</string>
    <string name="by">Oleh</string>
    <string name="erik">Erik Satriawan</string>
    <string name="movie_catalog">Movie Catalogue</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="tv_detail">Tv Detail</string>
    <string name="genre">Genre : %s</string>
    <string name="runtime">Runtime : %s</string>
    <string name="status">Status</string>
    <string name="description">Overview</string>
    <string name="rating">Rating \n%s</string>
    <string name="user_score">User Score \n%s</string>
    <string name="double_click_exit">Klik sekali lagi untuk keluar</string>
    <string name="genres">Genres</string>
    <string name="production">Production</string>
    <string name="dummy_int">0</string>
    <string name="dummy_reviews">Reviews</string>
    <string name="movie_name">Movie Name</string>
    <string name="tagline">Tagline</string>
    <string name="release_date">Release Date</string>
    <string name="homepage">Homepage</string>
    <string name="movie_images">Movie Images</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="last_episode">Last Episode\nEpisode %s</string>
    <string name="next_episode">Next Episode\nEpisode %s</string>
    <string name="total_seaons">Total Seasons : %s</string>
    <string name="next_episode_null">Next Episode Not Available</string>
    <string name="delete_movie_favorite">Anda yakin akan menghapus film ini dari favorit?</string>
    <string name="delete_tv_favorite">Anda yakin akan menghapus serial tv ini dari favorit?</string>
    <string name="url_not_found">Url Tidak Ditemukan</string>
    <string name="OK">OK</string>
    <string name="favorite">Favorite</string>
    <string name="something_wrong">Terjadi Kesalahan</string>
    <string name="add_favorite">Menambahkan ke favorite</string>
    <string name="delete_favortie">Menghapus dari favorite</string>
    <string name="null_or_empty">Null Or Empty</string>
    <string name="no_fav_movie">Anda belum mempunyai favorit film</string>
    <string name="no_fav_tv">Anda belum mempunyai favorit serial tv</string>
</resources>