...
            android:text="@string/dummy_reviews"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tvRatingTV"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/movie_name"
            android:textColor="@color/black"
...
            android:textColor="@color/dark_grey"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameTv" />

        <TextView
            android:id="@+id/tvReleaseDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/releasedate"
            android:textColor="@color/dark_grey"
...
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/line"
            app:layout_constraintTop_toBottomOf="@+id/rvGenres" />

        <TextView
            android:id="@+id/tvDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/description"
...
